<resources>
    <string name="app_name">Ayazbi</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="input_mail">Введите ваш email</string>
    <string name="input_password">Введите ваш пароль</string>
    <string name="sign_in">Войти</string>
    <string name="admin">Админ панель</string>
    <string name="dont_have_an_account">У вас нет учетной записи?</string>
    <string name="have_an_account">У вас уже имеется учетная запись? Войти</string>
    <string name="description">Logo</string>
    <string name="reg">Выберите тип регистрации</string>
    <string name="reg_pat">Регистрация пациента</string>
    <string name="reg_doc">Регистрация доктора</string>
    <string name="back_reg">Уже имеется регистрация? Войти</string>
    <string name="fullname">Введите ФИО</string>
    <string name="phone">Введите ваш номер телефона</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="IIN">Введите Ваш ИИН</string>
    <string-array name="timeframes">
        <item>Выберите время</item>
        <item>7-9</item>
        <item>9-11</item>
        <item>11-13</item>
        <item>13-15</item>
    </string-array>
    <string-array name="timeframes1">
        <item>Выберите время</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
    </string-array>
    <string-array name="Specialization">
        <item>Выберите врача</item>
        <item>Терапевт</item>
        <item>Педиатр</item>
        <item>Отоларинголог (ЛОР)</item>
        <item>Кардиолог</item>
    </string-array>

</resources>