<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectRegActivity">
    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo_meded"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/description"/>


    <TextView
        android:id="@+id/title"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/title2"
        android:text="@string/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/PatReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_pat"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/DocReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_doc"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/button_background"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_reg"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="17sp"/>

</LinearLayout>