<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/logo_meded"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/description"/>


        <TextView
            android:id="@+id/title"
            android:text="@string/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#000"
                android:theme="@style/TextInputlayoutStyle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:hintTextAppearance="@color/design_default_color_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmail"
                    android:hint="@string/input_mail"
                    android:drawableStart="@drawable/ic_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textColorHint="@color/black">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#000"
                android:theme="@style/TextInputlayoutStyle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:hintTextAppearance="@color/design_default_color_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:hint="@string/input_password"
                    android:drawableStart="@drawable/ic_lock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textColorHint="@color/black">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:background="@drawable/button_background"/>

            <TextView
                android:id="@+id/loginPageQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="#000"
                android:gravity="center"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="#000"
                android:gravity="center"
                android:textSize="14sp"/>


        </LinearLayout>
    </LinearLayout>

</ScrollView>