<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocRegActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/logo_meded"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/description"/>


        <TextView
            android:id="@+id/title"
            android:text="@string/reg_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileimage"
            app:civ_border_width="2dp"
            android:layout_gravity="center"
            app:civ_border_color="#FF000000"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile_image"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputlayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registrationfullname"
            android:hint="@string/fullname"
            android:drawableStart="@drawable/ic_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textColorHint="@color/black">

        </com.google.android.material.textfield.TextInputEditText>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registrationIIN"
            android:hint="Введите ваш ИИН"
            android:drawableStart="@drawable/ic_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textColorHint="@color/black">

        </com.google.android.material.textfield.TextInputEditText>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registrationPhone"
            android:hint="@string/phone"
            android:drawableStart="@drawable/ic_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textColorHint="@color/black">

        </com.google.android.material.textfield.TextInputEditText>
        <Spinner
            android:id="@+id/availabilityspinner"
            android:layout_gravity="center"
            android:gravity="center"
            android:popupBackground="#fff"
            android:entries="@array/timeframes"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/specializationspinner"
            android:layout_gravity="center"
            android:gravity="center"
            android:popupBackground="#fff"
            android:entries="@array/Specialization"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:hint="@string/input_password"
            android:drawableStart="@drawable/ic_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textColorHint="@color/black">

        </com.google.android.material.textfield.TextInputEditText>
        <Button
            android:id="@+id/regButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:background="@drawable/button_background"/>

        <TextView
            android:id="@+id/RegistrationPageQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="#000"
            android:gravity="center"
            android:textSize="17sp"/>
    </LinearLayout>

</ScrollView>